:wrench: editor config : else on same line in JS

--- a/.editorconfig
+++ b/.editorconfig
@@ -141,7 +141,7 @@ ij_javascript_chained_call_dot_on_new_line = true
 ij_javascript_class_brace_style = end_of_line
 ij_javascript_comma_on_new_line = false
 ij_javascript_do_while_brace_force = always
-ij_javascript_else_on_new_line = true
+ij_javascript_else_on_new_line = false
 ij_javascript_enforce_trailing_comma = keep
 ij_javascript_extends_keyword_wrap = off
 ij_javascript_extends_list_wrap = off
