N°3464 add test in phpunit.xml.dit to validate the fix

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -47,6 +47,9 @@
         <testsuite name="Core">
             <directory>core</directory>
         </testsuite>
+        <testsuite name="Webservices">
+          <directory>webservices</directory>
+        </testsuite>
         <testsuite name="Tickets">
             <directory>itop-tickets</directory>
         </testsuite>
