--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
       "core/legacy/querybuildercontextlegacy.class.inc.php",
       "core/querybuilderexpressions.class.inc.php",
       "core/legacy/querybuilderexpressionslegacy.class.inc.php",
+      "core/oql/build/PHP/",
       "application/startup.inc.php",
       "application/loginform.class.inc.php",
       "application/loginbasic.class.inc.php",
