N°3805 - Collectors not working on itop 3.0 - activate data synchro test in ci + cover current bug with a specific one

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -62,6 +62,9 @@
         <testsuite name="Status">
             <directory>status</directory>
         </testsuite>
+        <testsuite name="Synchro">
+            <directory>synchro</directory>
+        </testsuite>
         <testsuite name="Setup">
             <file>setup/SetupUtilsTest.php</file>
         </testsuite>
