--- a/test/postbuild_integration.xml.dist
+++ b/test/postbuild_integration.xml.dist
@@ -16,7 +16,7 @@
 <!--   along with iTop. If not, see <http://www.gnu.org/licenses/> -->
 <!-- -->
 
-<phpunit bootstrap="unittestautoload.php"
+<phpunit bootstrap="testUtils/bootstrap.php"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/6.3/phpunit.xsd"
          backupGlobals="false"
