N°4020 - timeout on updating the hierarchical key during setup

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ test/vendor/*
 !/data/.htaccess
 !/data/index.php
 !/data/web.config
+!/data/.setup-rebuild-hkeys-never
 
 # iTop extensions
 /extensions/**
