--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
 ij_formatter_tags_enabled = false
 ij_smart_tabs = false
-ij_visual_guides = 80, 120
+ij_visual_guides = 300
 ij_wrap_on_typing = true
 
 [*.css]
