:wrench: .editorConfig : disable PHP variables alignement Still enabled for key/value pairs though ! Example in \UtilsTest::ConvertToBytesProvider

--- a/.editorconfig
+++ b/.editorconfig
@@ -285,7 +285,7 @@ indent_style = tab
 ij_continuation_indent_size = 4
 ij_smart_tabs = true
 ij_wrap_on_typing = false
-ij_php_align_assignments = true
+ij_php_align_assignments = false
 ij_php_align_class_constants = false
 ij_php_align_group_field_declarations = false
 ij_php_align_inline_comments = false
