--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "type": "project",
   "license": "AGPLv3",
   "require": {
-    "php": ">=7.1.3",
+    "php": ">=7.1.3 <8.0.0",
     "ext-ctype": "*",
     "ext-dom": "*",
     "ext-gd": "*",
