Re-dump autoloader since 7c7386a broke it -- with platform check enabled

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
       "*": "dist"
     },
     "sort-packages": true,
-    "classmap-authoritative": true
+    "classmap-authoritative": true,
+    "platform-check": true
   },
   "autoload": {
     "classmap": [
