Tests : remove global process isolation Is done in ItopDataTestCase using annotation Other tests (like the one extending ItopTestCase) won't use isolation anymore

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -29,7 +29,7 @@
          forceCoversAnnotation="false"
          mapTestClassNameToCoveredClassName="false"
          printerClass="\PHPUnit\TextUI\ResultPrinter"
-         processIsolation="true"
+         processIsolation="false"
          stopOnError="false"
          stopOnFailure="false"
          stopOnIncomplete="false"
