--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -19,7 +19,7 @@
 <phpunit bootstrap="unittestautoload.php"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/6.3/phpunit.xsd"
-         backupGlobals="false"
+         backupGlobals="true"
          backupStaticAttributes="false"
          cacheTokens="false"
          colors="true"
