:wrench: phpunit.xml setup at the end \Combodo\iTop\Test\UnitTest\Synchro\DataSynchroTest::RunDataSynchroTest was generating a ConfigException (file exists but cannot be read)

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -63,9 +63,6 @@
     <!-- testsuite name="OQL">
         <directory>OQL</directory>
     </testsuite -->
-    <testsuite name="Setup">
-      <directory>setup</directory>
-    </testsuite>
     <testsuite name="Sources">
       <directory>sources</directory>
     </testsuite>
@@ -77,6 +74,11 @@
     </testsuite>
     <testsuite name="Webservices">
       <directory>webservices</directory>
+    </testsuite>
+
+    <!-- Setup at the end to avoid problems with config file permissions -->
+    <testsuite name="Setup">
+      <directory>setup</directory>
     </testsuite>
 
     <testsuite name="Extensions">
