:wrench: phpunit.xml restoring old style Not enough time to work on this right now :( Will be done with N°4660

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -41,28 +41,28 @@
          verbose="false">
 
   <testsuites>
-    <testsuite name="Application">
-      <directory>application</directory>
+    <testsuite name="Extensions">
+      <directory>../env-production/*/test</directory>
     </testsuite>
     <testsuite name="Core">
       <directory>core</directory>
     </testsuite>
-    <testsuite name="CoreExtensions">
-      <directory>coreExtensions</directory>
+    <testsuite name="Webservices">
+      <directory>webservices</directory>
     </testsuite>
-    <testsuite name="Integration">
-      <directory>integration</directory>
-    </testsuite>
-    <testsuite name="Itop-Config">
-      <directory>itop-config</directory>
-    </testsuite>
-    <testsuite name="Itop-Tickets">
+    <testsuite name="Tickets">
       <directory>itop-tickets</directory>
     </testsuite>
+    <testsuite name="Config">
+      <directory>itop-config</directory>
+    </testsuite>
+    <testsuite name="Application">
+      <directory>application</directory>
+    </testsuite>
     <!-- OQL : taking too long (20min+)... we should move this to nightlies ! See N°4655 -->
-    <!-- testsuite name="OQL">
+    <!--testsuite name="OQL">
         <directory>OQL</directory>
-    </testsuite -->
+    </testsuite-->
     <testsuite name="Sources">
       <directory>sources</directory>
     </testsuite>
@@ -72,17 +72,14 @@
     <testsuite name="Synchro">
       <directory>synchro</directory>
     </testsuite>
-    <testsuite name="Webservices">
-      <directory>webservices</directory>
-    </testsuite>
-
-    <!-- Setup at the end to avoid problems with config file permissions -->
     <testsuite name="Setup">
       <directory>setup</directory>
     </testsuite>
-
-    <testsuite name="Extensions">
-      <directory>../env-production/*/test</directory>
+    <testsuite name="Integration">
+      <directory>integration</directory>
+    </testsuite>
+    <testsuite name="CoreExtensions">
+      <directory>coreExtensions</directory>
     </testsuite>
   </testsuites>
 
