N°4624 Remove processIsolation flag from postBuild tests Was done in standard test suite (test/phpunit.xml.dist) with 6bf25f90

--- a/test/postbuild_integration.xml.dist
+++ b/test/postbuild_integration.xml.dist
@@ -19,7 +19,7 @@
 <phpunit bootstrap="unittestautoload.php"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/6.3/phpunit.xsd"
-         backupGlobals="false"
+         backupGlobals="true"
          backupStaticAttributes="false"
          cacheTokens="false"
          colors="true"
@@ -29,7 +29,7 @@
          forceCoversAnnotation="false"
          mapTestClassNameToCoveredClassName="false"
          printerClass="\PHPUnit\TextUI\ResultPrinter"
-         processIsolation="true"
+         processIsolation="false"
          stopOnError="false"
          stopOnFailure="false"
          stopOnIncomplete="false"
