N°4660 restore old phpunit testsuites order Was causing error in DataSynchroTest::testDataSynchroByHttp

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -23,31 +23,28 @@
   </php>
 
   <testsuites>
-    <testsuite name="Application">
-      <directory>application</directory>
+    <testsuite name="Extensions">
+      <directory>../env-production/*/test</directory>
     </testsuite>
     <testsuite name="Core">
       <directory>core</directory>
     </testsuite>
-    <testsuite name="CoreExtensions">
-      <directory>coreExtensions</directory>
+    <testsuite name="Webservices">
+      <directory>webservices</directory>
     </testsuite>
-    <testsuite name="Integration">
-      <directory>integration</directory>
+    <testsuite name="Tickets">
+      <directory>itop-tickets</directory>
     </testsuite>
-    <testsuite name="Itop-Config">
+    <testsuite name="Config">
       <directory>itop-config</directory>
     </testsuite>
-    <testsuite name="Itop-Tickets">
-      <directory>itop-tickets</directory>
+    <testsuite name="Application">
+      <directory>application</directory>
     </testsuite>
     <!-- OQL : taking too long (20min+)... we should move this to nightlies ! See N°4655 -->
     <!--testsuite name="OQL">
         <directory>OQL</directory>
     </testsuite-->
-    <testsuite name="Setup">
-      <directory>setup</directory>
-    </testsuite>
     <testsuite name="Sources">
       <directory>sources</directory>
     </testsuite>
@@ -57,12 +54,14 @@
     <testsuite name="Synchro">
       <directory>synchro</directory>
     </testsuite>
-    <testsuite name="Webservices">
-      <directory>webservices</directory>
+    <testsuite name="Setup">
+      <directory>setup</directory>
     </testsuite>
-
-    <testsuite name="Extensions">
-      <directory>../env-production/*/test</directory>
+    <testsuite name="Integration">
+      <directory>integration</directory>
+    </testsuite>
+    <testsuite name="CoreExtensions">
+      <directory>coreExtensions</directory>
     </testsuite>
   </testsuites>
 
