:pushpin: N°4284 Composer libs : fix twig/twig to ~1.42.5 Without specifying explicitly the Twig version, since the update of require php from 5.6 to 7.0 we are getting Twig 2.12.5 ! We don't want Twig 2 as this version changes the macro scope and causes massive changes in our code... This update will be done later in other branches.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "symfony/framework-bundle": "~3.4.47",
     "symfony/polyfill-php70": "1.*",
     "symfony/twig-bundle": "~3.4.47",
-    "symfony/yaml": "~3.4.47"
+    "symfony/yaml": "~3.4.47",
+    "twig/twig": "~1.42.5"
   },
   "require-dev": {
     "symfony/stopwatch": "~3.4.47",
