--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "ext-json": "*",
     "ext-mysqli": "*",
     "ext-soap": "*",
-    "combodo/tcpdf": "6.3.5",
+    "combodo/tcpdf": "~6.4.4",
     "nikic/php-parser": "^3.1",
     "pear/archive_tar": "1.4.14",
     "pelago/emogrifier": "2.1.0",
