--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "ext-soap": "*",
     "combodo/tcpdf": "~6.4.4",
     "nikic/php-parser": "~4.13.2",
-    "pear/archive_tar": "1.4.14",
+    "pear/archive_tar": "~1.4.14",
     "pelago/emogrifier": "2.1.0",
     "scssphp/scssphp": "1.0.6",
     "swiftmailer/swiftmailer": "5.4.12",
