:wrench: N°3091 PHPunit XML : fix correct PHP INI settings see https://phpunit.readthedocs.io/en/8.5/configuration.html#the-php-element

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -18,8 +18,10 @@
 >
 
   <php>
-    <ini name="display_errors" value="true"/>
-    <ini name="error_reporting" value="true"/>
+    <ini name="error_reporting" value="E_ALL"/>
+    <ini name="display_errors" value="On"/>
+    <ini name="log_errors" value="On"/>
+    <ini name="html_errors" value="On"/>
   </php>
 
   <testsuites>
