:wrench: N°3091 PHPunit XML : change html_errors PHP setting We are outputting to console, and will get results in Jenkins or terminal, so no HTML please :o)

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -22,7 +22,7 @@
     <ini name="error_reporting" value="E_ALL"/>
     <ini name="display_errors" value="On"/>
     <ini name="log_errors" value="On"/>
-    <ini name="html_errors" value="On"/>
+    <ini name="html_errors" value="Off"/>
   </php>
 
   <testsuites>
