N°3169 - Add feature to connect Gsuite mail box with OAuth N°2504 - Add feature to connect Office mail box with OAuth2 for Microsoft Graph N°5102 - Allow to send emails (eg. notifications) using GSuite SMTP and OAuth  * 2.7 migration (wip)

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "ext-mysqli": "*",
     "ext-soap": "*",
     "combodo/tcpdf": "~6.4.4",
+    "guzzlehttp/guzzle": "^6.5",
     "laminas/laminas-mail": "^2.11",
     "laminas/laminas-servicemanager": "^3.5",
     "league/oauth2-google": "^3.0",
