N°4224 Fix failed Jenkins build due to "Function ReflectionType::__toString() is deprecated"
E_DEPRECATED were previously hidden on the whole test infra.
But after PHPUnit update (N°3091) we restored them.

On legacy builds we are still using PHPUnit 6 and mocks which are generating such notices. So we are now hiding them only where necessary !

--- a/test/phpunit.xml.dist
+++ b/test/phpunit.xml.dist
@@ -40,6 +40,14 @@
          timeoutForLargeTests="60"
          verbose="false">
 
+  <php>
+    <!--
+      N°4224 workaround for old PHPUnit 6 and phpunit-mock-objects E_DEPRECATED notices
+      To remove when switching to PHPUnit 8.5 and later !
+    -->
+    <ini name="error_reporting" value="E_ALL &amp; ~E_DEPRECATED"/>
+  </php>
+
   <testsuites>
     <testsuite name="Extensions">
       <directory>../env-production/*/test</directory>
