--- a/test/phpunit_nightly.xml.dist
+++ b/test/phpunit_nightly.xml.dist
@@ -5,6 +5,7 @@
         bootstrap="unittestautoload.php"
         backupGlobals="true"
         colors="true"
+        columns="120"
         convertErrorsToExceptions="true"
         convertNoticesToExceptions="true"
         convertWarningsToExceptions="true"
@@ -21,7 +22,7 @@
         <ini name="error_reporting" value="E_ALL"/>
         <ini name="display_errors" value="On"/>
         <ini name="log_errors" value="On"/>
-        <ini name="html_errors" value="On"/>
+        <ini name="html_errors" value="Off"/>
     </php>
 
     <testsuites>
