--- a/test/postbuild_integration.xml.dist
+++ b/test/postbuild_integration.xml.dist
@@ -5,6 +5,7 @@
         bootstrap="unittestautoload.php"
         backupGlobals="true"
         colors="true"
+        columns="120"
         convertErrorsToExceptions="true"
         convertNoticesToExceptions="true"
         convertWarningsToExceptions="true"
