--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "combodo/itop",
   "description": "IT Operations Portal",
   "type": "project",
-  "license": "AGPL-3.0-or-later",
+  "license": "AGPL-3.0-only",
   "require": {
     "php": ">=7.0.8",
     "ext-ctype": "*",
