--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "league/oauth2-google": "^3.0",
     "nikic/php-parser": "~4.14.0",
     "pear/archive_tar": "~1.4.14",
-    "pelago/emogrifier": "~3.1.0",
+    "pelago/emogrifier": "^6.0.0",
     "scssphp/scssphp": "^1.10.3",
     "symfony/console": "5.4.*",
     "symfony/dotenv": "5.4.*",
